log/build_2021-03-21_15-30-10/main_package/stdout_stderr.log
running egg_info
writing ../../build/main_package/main_package.egg-info/PKG-INFO
writing dependency_links to ../../build/main_package/main_package.egg-info/dependency_links.txt
writing entry points to ../../build/main_package/main_package.egg-info/entry_points.txt
writing requirements to ../../build/main_package/main_package.egg-info/requires.txt
writing top-level names to ../../build/main_package/main_package.egg-info/top_level.txt
reading manifest file '../../build/main_package/main_package.egg-info/SOURCES.txt'
writing manifest file '../../build/main_package/main_package.egg-info/SOURCES.txt'
running build
running build_py
copying main_package/webcam_stream.py -> /home/jordy/ku_turtlebot/build/main_package/build/lib/main_package
running install
running install_lib
copying /home/jordy/ku_turtlebot/build/main_package/build/lib/main_package/webcam_stream.py -> /home/jordy/ku_turtlebot/install/main_package/lib/python3.8/site-packages/main_package
byte-compiling /home/jordy/ku_turtlebot/install/main_package/lib/python3.8/site-packages/main_package/webcam_stream.py to webcam_stream.cpython-38.pyc
  File "/home/jordy/ku_turtlebot/install/main_package/lib/python3.8/site-packages/main_package/webcam_stream.py", line 25
    if(!self.cam.isOpened()):
       ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/jordy/ku_turtlebot/install/main_package/lib/python3.8/site-packages/main_package-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/main_package/main_package.egg-info to /home/jordy/ku_turtlebot/install/main_package/lib/python3.8/site-packages/main_package-0.0.0-py3.8.egg-info
running install_scripts
Installing listener script to /home/jordy/ku_turtlebot/install/main_package/lib/main_package
Installing talker script to /home/jordy/ku_turtlebot/install/main_package/lib/main_package
Installing webcam script to /home/jordy/ku_turtlebot/install/main_package/lib/main_package
Installing webcam_stream script to /home/jordy/ku_turtlebot/install/main_package/lib/main_package
Installing webcam_test script to /home/jordy/ku_turtlebot/install/main_package/lib/main_package
writing list of installed files to '/home/jordy/ku_turtlebot/build/main_package/install.log'
